# cdranalysisII

./: .gitignore  AGENTS.md  LICENSE  README.md  manage.py  pyproject.toml
backend/: .gitignore  README.md  conftest.py  manage.py  processador.py  pyproject.toml  settings.py  urls.py  wsgi.py
backend/api/: serializers.py  urls.py  views.py
backend/base/: admin.py  models.py  urls.py  views.py
backend/base/templates/base/: home.html
backend/base/tests/: test_home.py  test_manager.py
backend/cdr/: admin.py  models.py  serializers.py  services.py  views.py
backend/cdr/migrations/: 0001_initial.py  0002_alter_device_options_remove_device_msisdn.py
backend/cdr/tests/: test_api.py  test_models.py
backend/cdranalysis/: asgi.py  settings.py  urls.py  wsgi.py
backend/cdranalysis/base/: admin.py  apps.py  models.py  urls.py  views.py
backend/cdranalysis/base/migrations/: 0001_initial.py
backend/cdranalysis/base/templates/base/: base.html  home.html
backend/cdranalysis/base/templates/registration/: login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html
backend/cdranalysis/base/tests/: test_home.py  test_manager.py
backend/core/: models.py
backend/device/: models.py
backend/device/migrations/: 0001_initial.py
backend/files/: cdr.xlsx  device.xlsx
backend/kernel/: asgi.py  middleware.py  settings.py  urls.py
backend/kernel/config/: env-sample
backend/kernel/docker/: docker-compose.yml
backend/kernel/poetry/: pyproject.toml
backend/tools/: load_cdr.py  load_cdr_v2.py  load_csv_cdr.py  load_xlsx_cdr.py  load_xlsx_cdr_pandas.py  load_xlsx_device.py  reset_db.py
backend/user/: admin.py  manager.py  models.py  serializers.py  views.py
backend/user/fixtures/: 01_groups.json
backend/user/migrations/: 0001_initial.py
backend/user/tests/: conftest.py  test_api.py  test_manager.py  test_models.py
config/: env-sample
docker/: docker-compose.yml
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  quasar.config.js
frontend/docs/: roles.md
frontend/src/assets/: logo_solis.jfif
frontend/src/boot/: auth.js  axios.js
frontend/src/components/: AdminSidebar.vue  AppSidebar.vue  DeviceStatusRow.vue  EssentialLink.vue  InstitutionalCard.vue  MetricCard.vue
frontend/src/composables/: useAuth.js  useCrudForm.js  useCrudList.js  useDashboardFilter.js  useOptions.js
frontend/src/css/: app.scss
frontend/src/layouts/: AdminLayout.vue  MainLayout.vue
frontend/src/pages/: AdminPage.vue  EquipamentosPage.vue  IndexPage.vue  LoadPage.vue  LoginPage.vue  PanelPage.vue
frontend/src/pages/customer/: FormPage.vue  ListPage.vue  table.js
frontend/src/pages/device/: FormPage.vue  ListPage.vue  table.js
frontend/src/pages/mno/: FormPage.vue  ListPage.vue  table.js
frontend/src/pages/networkprovider/: FormPage.vue  ListPage.vue  table.js
frontend/src/pages/organization/: FormPage.vue  ListPage.vue  table.js
frontend/src/pages/priceplan/: FormPage.vue  ListPage.vue  table.js
frontend/src/pages/profile/: FormPage.vue  ListPage.vue  table.js
frontend/src/pages/session/: FormPage.vue  ListPage.vue  table.js
frontend/src/pages/thing/: FormPage.vue  ListPage.vue  table.js
frontend/src/router/: index.js  routes.js
frontend/src/services/: auth.js  cdrImport.js  crud.js  customer.js  device.js  endpoints.js  mno.js  networkprovider.js  organization.js  priceplan.js  profile.js  session.js  thing.js  user.js
