[tool.poetry]
name = "backend"
version = "0.1.0"
description = "This project is created to analyzing the CDRs (Call Detail Record)."
authors = ["Jorge Luis Plautz <jorge.plautz@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.6"
dj-database-url = "^3.0.1"
django-extensions = "^4.1"
ipython = "^9.5.0"
python-decouple = "^3.8"
django-min-custom-user = "^0.2.0"
pillow = "^11.3.0"
psycopg2-binary = "^2.9.11"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-django = "^4.11.1"
pytest-cov = "^7.0.0"
taskipy = "^1.14.1"
ruff = "^0.14.1"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "cdranalysis.settings"
python_files = ["test*.py", "*test.py", "testing/python/*.py"]
addopts = '-p no:warnings'

[tool.taskipy.variables]
pyc = "./ -name '*.pyc' -delete"
pycache = "./ -name '__pycache__' -delete"
thumbs = "./ -name 'Thumbs.db' -delete"
root = "./ -name '*~' -delete"

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
clean = {cmd = "find {pyc} && find {pycache} && find {thumbs} && find {root}", help = "Clear the project off all files that are dispensables.", use_vars = true}
post_clean = {cmd = "rm -rf .cache && rm -rf .pytest_cache && rm -rf dist && rm -rf *.egg-info && rm -rf htmlcov && rm -rf .tox/ && rm -rf site && rm -rf site && rm -rf .ruff_cache", help = "Remove all files that are dispensables."}
format = 'ruff format'
run = 'python ../manages.py runserver'
pre_test = 'task lint'
test = 'pytest -s -x --cov=cdranalysis -vv'
post_test = 'coverage html'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
