[project]
name = "cdranalysisii"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=3.1.2",
    "django>=6.0.6",
    "django-cors-headers>=4.9.0",
    "django-extensions>=4.1",
    "djangorestframework>=3.17.0",
    "djangorestframework-simplejwt>=5.5.1",
    "gunicorn>=25.3.0",
    "ipython>=9.15.0",
    "pandas>=3.0.3",
    "pillow>=12.3.0",
    "python-decouple>=3.8",
    "taskipy>=1.2.1",
]
[tool.taskipy.tasks]
startapp = "uv run python manage.py startapp"
makemigrations = "uv run python manage.py makemigrations"
migrate = "uv run python manage.py migrate"
createsuperuser = "uv run python manage.py createsuperuser"
runserver = "uv run python manage.py runserver"
loadfixtures = "uv run python manage.py migrate && uv run python manage.py loaddata gasto/fixtures/01_segmento.json gasto/fixtures/02_cardbank.json gasto/fixtures/03_regralimpezanome.json gasto/fixtures/04_gasto.json gasto/fixtures/05_parcelas.json events/fixtures/01_events.json"
dumpfixtures = "uv run python manage.py dumpdata gasto.segmento --format=json --indent=2 > gasto/fixtures/01_segmento.json && uv run python manage.py dumpdata gasto.cardbank --format=json --indent=2 > gasto/fixtures/02_cardbank.json && uv run python manage.py dumpdata gasto.regralimpezanome --format=json --indent=2 > gasto/fixtures/03_regralimpezanome.json"
setupdb = "uv run python manage.py makemigrations && uv run python manage.py migrate && task loadfixtures"
pytest = "uv run pytest -vv"
shell_plus = "uv run python manage.py shell_plus"
lint = "ruff check"
lint_fix = "ruff check --fix"
